# pdf-parser

./: .gitignore  README.md  app.py  biodata_parser_desktop_app_codex_instructions.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  cleanup-releases.yml  release.yml
biodata_parser/: __init__.py  constants.py  logging_config.py  paths.py
biodata_parser/db/: database.py  migrations.py  repository.py
biodata_parser/parsing/: confidence.py  field_config.py  field_extractor.py  ocr_extractor.py  pdf_text_extractor.py  text_normalizer.py  validators.py
biodata_parser/services/: export_service.py  import_service.py  pdf_open_service.py  update_service.py
biodata_parser/ui/: main_window.py  record_dialog.py  settings_dialog.py  table_model.py  theme.py
biodata_parser/utils/: file_hash.py
config/: default_fields.yaml
scripts/: run_dev.py  smoke_test_qt.py
tests/: test_field_config.py  test_field_extractor.py  test_import_service.py  test_text_normalizer.py  test_validators.py
